[project]
name = "douban-comment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.1",
    "requests[socks]>=2.32.5",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0.0"]
